<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="sg.edu.nus.gps.MapsActivity">

    <Button
        android:text="@string/get_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:onClick="displayLocation"/>

    <TextView
        android:id="@+id/coordinates1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/coordinates"
        android:paddingRight="10dp" android:textAppearance="?android:attr/textAppearanceLarge" android:textSize="30sp" />

    <TextView
        android:id="@+id/coordinates"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="10dp" android:textAppearance="?android:attr/textAppearanceLarge" android:textSize="28sp" />

    <TextView
        android:id="@+id/readingNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/number_reads"
        android:paddingRight="10dp" android:textAppearance="?android:attr/textAppearanceLarge" android:textSize="30sp" />

    <TextView
        android:id="@+id/readingNumber1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="10dp" android:textAppearance="?android:attr/textAppearanceLarge" android:textSize="30sp" />


    <Button
        android:text="@string/get_mean"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button3"
        android:onClick="onClick_get_mean"/>

    <Button
        android:text="@string/clear_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button2"
        android:onClick="onClick_clear_history"/>

    <Button
        android:text="@string/accMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonMaptoMain"
        android:onClick="goToMainActivity"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:layout_weight="1">

        <TableLayout
            android:id="@+id/tableLayout1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="10dip"
            xmlns:android="http://schemas.android.com/apk/res/android">

        </TableLayout>

    </ScrollView>



</LinearLayout>